update Laplace BEM: eval potential still working site / BEM_Laplace_Capacitor: might reveal in BEM or eval potential

--- a/demos/Laplace_DtN_direct.ipynb
+++ b/demos/Laplace_DtN_direct.ipynb
@@ -49,7 +49,7 @@
    "source": [
     "Let us choose the following ansatz for the solution $u\\in H^1(\\Omega)$ (direct ansatz) \n",
     "\n",
-    "$$ u(x) = \\underbrace{ \\int\\limits_\\Gamma \\displaystyle{\\frac{1}{4\\,\\pi}\\, \\frac{1}{\\| x-y\\|} } \\, u_1(y)\\, \\mathrm{d}s_y}_{\\displaystyle{ \\mathrm{ SL}(u_1) }} - \\underbrace{ \\int\\limits_\\Gamma \\displaystyle{\\frac{1}{4\\,\\pi}\\, \\frac{\\langle n(y) , x-y\\rangle }{\\| x-y\\|^3} } \\, u_0(y)\\, \\mathrm{d}s_y}_{\\displaystyle{ \\mathrm{DL}(u_0) }}$$ \n"
+    "$$ u(x) = \\underbrace{ \\int\\limits_\\Gamma \\displaystyle{\\frac{1}{4\\,\\pi}\\, \\frac{1}{\\| x-y\\|} } \\, j(y)\\, \\mathrm{d}s_y}_{\\displaystyle{ \\mathrm{ SL}(j) }} - \\underbrace{ \\int\\limits_\\Gamma \\displaystyle{\\frac{1}{4\\,\\pi}\\, \\frac{\\langle n(y) , x-y\\rangle }{\\| x-y\\|^3} } \\, m(y)\\, \\mathrm{d}s_y}_{\\displaystyle{ \\mathrm{DL}(m) }}$$ \n"
    ]
   },
   {
@@ -121,9 +121,9 @@
    "source": [
     "**Boundary Integral Equation** \n",
     "\n",
-    "We solve for the Neumann data $j \\in H^{-\\frac12}(\\Gamma)$ by the boundary element method, i.e., \n",
+    "We carefully apply the Dirichlet trace on the ansatz for $u$, we get a boundary integral equation for the Neumann data $j \\in H^{-\\frac12}(\\Gamma)$ which can be read as follows: determine $j$ such that \n",
     "\n",
-    "$$\\begin{array}{r c ccccc} \\forall \\, v\\in H^{-\\frac12}(\\Gamma): && \\displaystyle \\int\\limits_\\Gamma \\gamma_0 \\left(\\mathrm{SL}(j)\\right) \\cdot v \\, \\mathrm d s &=& \\displaystyle \\int\\limits_\\Gamma u_0 \\cdot v \\, \\mathrm d s &+& \\displaystyle \\int\\limits_\\Gamma \\gamma_0 \\left(\\mathrm{DL}(u_0)\\right)\\cdot v \\, \\mathrm d s \\\\[2ex] & \\Rightarrow & \\mathrm{V}\\,\\mathrm{j} &=& \\displaystyle \\frac12\\,\\mathrm{M} \\, \\mathrm m &+&  \\mathrm K\\, \\mathrm m \\,. \\end{array} $$ "
+    "$$\\begin{array}{r c ccccc} \\forall \\, v\\in H^{-\\frac12}(\\Gamma): && \\displaystyle \\int\\limits_\\Gamma \\gamma_0 \\left(\\mathrm{SL}(j)\\right) \\cdot v \\, \\mathrm d s &=& \\displaystyle \\int\\limits_\\Gamma m \\cdot v \\, \\mathrm d s &+& \\displaystyle \\int\\limits_\\Gamma \\gamma_0 \\left(\\mathrm{DL}(m)\\right)\\cdot v \\, \\mathrm d s \\\\[2ex] & \\Rightarrow & \\mathrm{V}\\,\\mathrm{j} &=& \\displaystyle \\frac12\\,\\mathrm{M} \\, \\mathrm m &+&  \\mathrm K\\, \\mathrm m \\,. \\end{array} $$ "
    ]
   },
   {
@@ -131,7 +131,7 @@
    "id": "34b34f68-3395-40b2-a0ec-93955123c232",
    "metadata": {},
    "source": [
-    "The discretisation of the above variational formulation leads to a system of linear equations, ie \n",
+    "The discretisation of the above variational formulation is the boundary element method and it leads to a system of linear equations, ie \n",
     "\n",
     "$$ \\mathrm{V} \\, \\mathrm{j} = \\left( \\frac12 \\,\\mathrm{M} + \\mathrm{K} \\right) \\, \\mathrm{m}\\,, $$ \n",
     "where the linear operators are as follows\n",
@@ -145,7 +145,7 @@
    "id": "bd4292d0-1b19-4847-9f8f-d3660ba78c4a",
    "metadata": {},
    "source": [
-    "We approximate the linear operators as hmatrices and solve for the Neumann data $u_1$ with an iterative solver:"
+    "We generate the linear operators and solve for the Neumann data $j$ using an iterative solver:"
    ]
   },
   {
@@ -193,17 +193,95 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e03ad1bd-ea71-4a75-bc3b-b19ce484afc9",
+   "cell_type": "markdown",
+   "id": "e4705bf1-90d3-4ea5-9efc-170667664ad3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Evaluate the solution on a screen inside $\\Omega$ "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99273a3a-52b8-4850-ad46-f5fb23f15262",
+   "id": "20eca0c0-63d0-4d93-8070-864aef6452de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "screen = WorkPlane(Axes( (0,0,0), Z, X)).RectangleC(0.5,0.5).Face()\n",
+    "vismesh = screen.GenerateMesh(maxh=0.05)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb9ec5da-b47d-46f3-a32d-36a181638c00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LSPotential = LaplaceSL( u*ds )\n",
+    "LDPotential = LaplaceDL( uH1*ds )\n",
+    "Draw(LSPotential(j) - LDPotential(m), vismesh) # Question: what do we draw here? \n",
+    "Draw(LSPotential(j) - LDPotential(m) - uexa, vismesh) # num solution - exact solution ( same question )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07475e90-1551-4b36-ac44-0c5312aeaa2a",
+   "metadata": {},
+   "source": [
+    "**Project repformula in H1 (which should be ok!) by Set**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39dfcf8a-e001-40df-a806-77a47b9694d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "repformula = LSPotential(j) - LDPotential(m)\n",
+    "fes_screen = H1(vismesh, order=5)\n",
+    "screen.faces.name=\"screen\"\n",
+    "gf_screen = GridFunction(fes_screen)\n",
+    "with TaskManager():\n",
+    "    gf_screen.Set(repformula, definedon=vismesh.Boundaries(\"screen\"))\n",
+    "Draw(gf_screen)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb9c361b-e6d3-4295-aa2b-b0a3d8d7679a",
+   "metadata": {},
+   "source": [
+    "**Details**\n",
+    "  \n",
+    "For any $v_i, u_j\\in H^{-\\frac12}(\\Gamma)$ and $w_j \\in H^{\\frac12}(\\Gamma)$ the layer potential operators are implemented as follows \n",
+    "\n",
+    "$$ \\begin{array}{rcl cl} V_{ij} &=& \\langle v_i, \\gamma_0 \\mathrm{SL}(u_j) \\rangle_{-\\frac12} &=& \\displaystyle \\frac{1}{4\\pi}\\, \\displaystyle \\int\\limits_\\Gamma \\int\\limits_\\Gamma \\frac{1}{\\|x-y\\|} \\, u_j(x) \\, v_i(y) \\, \\mathrm{d} s_{y} \\, \\mathrm{d} s_x\\,, \\\\[2ex] K_{ij} &=& \\langle v_i, \\gamma_0 \\mathrm{DL}(w_j) \\rangle_{-\\frac12} &=& \\displaystyle \\frac{1}{4\\pi} \\int\\limits_\\Gamma\\int\\limits_\\Gamma n_y\\cdot \\nabla_y \\frac{1}{\\|x-y\\|} \\, w_j(x) \\, v_i(y) \\, \\mathrm{d} s_{y} \\, \\mathrm{d} s_x \\end{array}$$\n",
+    "\n",
+    "\n",
+    "You may assemble $V$ and $K$ it by\n",
+    "\n",
+    "```\n",
+    "V = LaplaceSL(u*ds)*v*ds\n",
+    "K = LaplaceDL(w*ds)*v*ds\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7652a650-f3e7-4d90-9fed-99b4f96d399f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(LSPotential)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3db028fb-61bd-484e-8fe6-5fe939394fd6",
    "metadata": {},
    "outputs": [],
    "source": []
