--- a/demos/Laplace_NtD_direct.ipynb
+++ b/demos/Laplace_NtD_direct.ipynb
@@ -43,7 +43,7 @@
     "\n",
     "The unique solution $u\\in H^1(\\Omega)$ can be written in the following form (representation forumula) \n",
     "\n",
-    "$$ u(x) = \\underbrace{ \\int\\limits_\\Gamma \\displaystyle{\\frac{1}{4\\,\\pi}\\, \\frac{1}{\\| x-y\\|} } \\, j(y)\\, \\mathrm{d}s_y}_{\\displaystyle{ \\mathrm{SL}(j) }} + \\underbrace{ \\int\\limits_\\Gamma \\displaystyle{\\frac{1}{4\\,\\pi}\\, \\frac{\\langle n(y), x-y \\rangle}{\\| x-y\\|^3} } \\, m( y)\\, \\mathrm{d}s_y}_{\\displaystyle{ \\mathrm{DL}(m) }}\\,.$$ \n"
+    "$$ u(x) = \\underbrace{ \\int\\limits_\\Gamma \\displaystyle{\\frac{1}{4\\,\\pi}\\, \\frac{1}{\\| x-y\\|} } \\, j(y)\\, \\mathrm{d}s_y}_{\\displaystyle{ \\mathrm{SL}(j) }} - \\underbrace{ \\int\\limits_\\Gamma \\displaystyle{\\frac{1}{4\\,\\pi}\\, \\frac{\\langle n(y), x-y \\rangle}{\\| x-y\\|^3} } \\, m( y)\\, \\mathrm{d}s_y}_{\\displaystyle{ \\mathrm{DL}(m) }}\\,.$$ \n"
    ]
   },
   {
@@ -245,7 +245,7 @@
    "id": "e374149d-545d-4ca2-bc6e-f03ebfdfc314",
    "metadata": {},
    "source": [
-    "**TODO Evaluation Solution**"
+    "**Evaluation Solution**"
    ]
   },
   {
@@ -254,7 +254,25 @@
    "id": "5b622504-e156-414c-a516-ed280b40914e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "screen = WorkPlane(Axes( (0,0,0), Z, X)).RectangleC(0.5,0.5).Face()\n",
+    "vismesh = screen.GenerateMesh(maxh=0.05)\n",
+    "#Draw (vismesh);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc032bf1-c606-41f0-aa9e-685f2eaf2d30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LSPotential = LaplaceSL( u*ds )\n",
+    "LDPotential = LaplaceDL( uH1*ds )\n",
+    "Draw(LSPotential(j) - LDPotential(m), vismesh) # QUESTION: what do we draw here? \n",
+    "Draw(uexa, vismesh) # exact solution ( same question )\n",
+    "#Draw(LSPotential(j) - LDPotential(m) - uexa, vismesh) # THIS DOES NOT WORK (apart from the constant ...) "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -263,14 +281,27 @@
    "source": [
     "**Details**\n",
     "  \n",
-    "The hypersingular operator is implemented as follows (reference below)\n",
+    "For any $u_j, v_i \\in H^{\\frac12}(\\Gamma)$ the hypersingular operator is implemented as follows (reference below)\n",
     "\n",
-    "$$ D_{ij} = \\langle v_j, \\gamma_1 \\mathrm{DL}(u_i) \\rangle_{-\\frac12} = \\frac{1}{4\\pi} \\int\\limits_\\Gamma\\int\\limits_\\Gamma \\frac{ \\langle \\mathrm{\\boldsymbol {curl}}_\\Gamma  \\,u_i(x), \\mathrm{\\boldsymbol{curl}}_\\Gamma\\, v_j(y) \\rangle}{\\|x-y\\|} \\, \\mathrm{d} s_{y} \\, \\mathrm{d} s_x $$ \n",
+    "$$ D_{ij} = \\langle v_i, \\gamma_1 \\mathrm{DL}(u_j) \\rangle_{-\\frac12} = \\frac{1}{4\\pi} \\int\\limits_\\Gamma\\int\\limits_\\Gamma \\frac{ \\langle \\mathrm{\\boldsymbol {curl}}_\\Gamma  \\,u_j(x), \\mathrm{\\boldsymbol{curl}}_\\Gamma\\, v_i(y) \\rangle}{\\|x-y\\|} \\, \\mathrm{d} s_{y} \\, \\mathrm{d} s_x $$ \n",
     "\n",
     "This explicit represenation of $D$ is the singular layer potential operator with vector valued surface curl operator applied on trial and test functions. You may assemble $D$ it by\n",
     "\n",
     "```\n",
     "D = LaplaceSL(curl(u)*ds)*curl(v)*ds\n",
+    "```\n",
+    "\n",
+    "Recall that for any $v_i\\in H^{-\\frac12}(\\Gamma)$ and $w_j \\in H^{\\frac12}(\\Gamma)$ the double layer potential operators $\\mathrm K$ has been given by\n",
+    "\n",
+    "$$ \\begin{array}{rcl cl} K_{ij} &=& \\langle v_i, \\gamma_0 \\mathrm{DL}(w_j) \\rangle_{-\\frac12} &=& \\displaystyle \\frac{1}{4\\pi} \\int\\limits_\\Gamma\\int\\limits_\\Gamma n_y\\cdot \\nabla_y \\frac{1}{\\|x-y\\|} \\, w_j(x) \\, v_i(y) \\, \\mathrm{d} s_{y} \\, \\mathrm{d} s_x \\end{array}$$\n",
+    "\n",
+    "And this means that the adjoint double layer potential operator equals its transposed, $\\mathrm K^\\intercal$.  \n",
+    "\n",
+    "You may assemble $\\mathrm V$ and $\\mathrm K$ it by\n",
+    "\n",
+    "```\n",
+    "V = LaplaceSL(u*ds)*v*ds\n",
+    "K = LaplaceDL(w*ds)*v*ds\n",
     "```"
    ]
   },
