--- a/demos/Laplace_NtD_indirect.ipynb
+++ b/demos/Laplace_NtD_indirect.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "813a7d56-14bb-412e-ad82-828c7954d860",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "fdc2b350-833b-47d0-b37f-c2a2ce73f9c2",
    "metadata": {},
    "outputs": [],
@@ -83,10 +83,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "9078bc2e-e3de-4564-a6f2-69553e6d1c39",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ndof H1 =  630\n"
+     ]
+    }
+   ],
    "source": [
     "fesH1 = H1(mesh, order=2, definedon=mesh.Boundaries(\".*\"))\n",
     "uH1,vH1 = fesH1.TnT()\n",
@@ -119,22 +127,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "da3065d0-817d-4268-a14a-c9494e084ab3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "uexa = 1/ sqrt( (x-1)**2 + (y-1)**2 + (z-1)**2 )\n",
-    "graduexa = CF( (uexa.Diff(x), uexa.Diff(y), uexa.Diff(z)) )\n",
+    "u_exa = 1/ sqrt( (x-1)**2 + (y-1)**2 + (z-1)**2 )\n",
+    "gradu_exa = CF( (u_exa.Diff(x), u_exa.Diff(y), u_exa.Diff(z)) )\n",
     "\n",
     "n = specialcf.normal(3)\n",
-    "j = graduexa*n\n",
+    "j = gradu_exa*n\n",
     "rhs = LinearForm(j*vH1.Trace()*ds(bonus_intorder=3)).Assemble()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "08cd62aa-9014-4a70-ae17-290dfd2de5c5",
    "metadata": {},
    "outputs": [],
@@ -153,20 +161,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "7e872d44-2db1-47c6-bb03-cff11a9fcba4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "D = LaplaceSL(curl(uH1)*ds) * curl(vH1)*ds"
+    "D = LaplaceSL(-curl(uH1)*ds) * curl(vH1)*ds # ZU KLÄREN VORZEICHEN irgendwo geht ein VORZEICHEN SCHIEF"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "9cd5c990-4240-4032-af06-ff2a7beacd20",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[2KCG iteration 1, residual = 1.0926249988826613     \n",
+      "\u001b[2KCG iteration 2, residual = 0.5729010293377176     \n",
+      "\u001b[2KCG iteration 3, residual = 0.34312530188590223     \n",
+      "\u001b[2KCG iteration 4, residual = 0.2303924026796566     \n",
+      "\u001b[2KCG iteration 5, residual = 0.17840078203740353     \n",
+      "\u001b[2KCG iteration 6, residual = 0.11050149092809973     \n",
+      "\u001b[2KCG iteration 7, residual = 0.07041199040456789     \n",
+      "\u001b[2KCG iteration 8, residual = 0.0424621243976524     \n",
+      "\u001b[2KCG iteration 9, residual = 0.026992974308580005     \n",
+      "\u001b[2KCG iteration 10, residual = 0.016201774986785808     \n",
+      "\u001b[2KCG iteration 11, residual = 0.01864346924208354     \n",
+      "\u001b[2KCG iteration 12, residual = 0.02056086215637912     \n",
+      "\u001b[2KCG iteration 13, residual = 0.006946861001430852     \n",
+      "\u001b[2KCG iteration 14, residual = 0.003687515147986319     \n",
+      "\u001b[2KCG iteration 15, residual = 0.001856658345736144     \n",
+      "\u001b[2KCG iteration 16, residual = 0.0009253109947845533     \n",
+      "\u001b[2KCG iteration 17, residual = 0.0004411780375487626     \n",
+      "\u001b[2KCG iteration 18, residual = 0.00020689857099380433     \n",
+      "\u001b[2KCG iteration 19, residual = 9.382945877775458e-05     \n",
+      "\u001b[2KCG iteration 20, residual = 4.1342574505381214e-05     \n",
+      "\u001b[2KCG iteration 21, residual = 1.7927723946356597e-05     \n",
+      "\u001b[2KCG iteration 22, residual = 7.132860201185534e-06     \n",
+      "\u001b[2KCG iteration 23, residual = 2.7865283200635e-06     \n",
+      "\u001b[2KCG iteration 24, residual = 1.0532230218821883e-06     \n",
+      "\u001b[2KCG iteration 25, residual = 6.117733200783969e-07     \n",
+      "\u001b[2KCG iteration 26, residual = 1.5301777310250243e-06     \n",
+      "\u001b[2KCG iteration 27, residual = 2.2228372134029882e-07     \n",
+      "\u001b[2KCG iteration 28, residual = 7.905543595306541e-08     \n",
+      "\u001b[2KCG iteration 29, residual = 4.0759197209770913e-08     \n",
+      "\u001b[2KCG iteration 30, residual = 3.954845063805263e-08     \n",
+      "\u001b[2KCG iteration 31, residual = 3.9202621905521385e-08     \n",
+      "\u001b[2KCG iteration 32, residual = 1.811933481110138e-08     \n",
+      "\u001b[2KCG iteration 33, residual = 8.619080341900025e-09     \n"
+     ]
+    }
+   ],
    "source": [
     "m = GridFunction(fesH1)\n",
     "pre = BilinearForm(uH1*vH1*ds).Assemble().mat.Inverse(freedofs=fesH1.FreeDofs()) \n",
@@ -176,10 +224,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "a08103a9-c71c-44d9-95ef-16664cf1b712",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d19a83b9b342418ab03864d5be66eeea",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "WebGuiWidget(layout=Layout(height='50vh', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.25…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "Draw (m, mesh, draw_vol=False, order=3);"
    ]
@@ -189,16 +252,64 @@
    "id": "8f84f41b-4f9d-4957-b51f-74af3370096a",
    "metadata": {},
    "source": [
-    "**TODO Evaluation of the solution**"
+    "**Evaluation of the solution**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "73ca13dc-d5e9-4c5e-a098-e6e0bb0c49ba",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f7cb5d253cee4979bc2d5268d86bdc3c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "WebGuiWidget(layout=Layout(height='50vh', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.25…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1f2fa3c6afbf418aa5ea46ada004cd94",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "WebGuiWidget(layout=Layout(height='50vh', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.25…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "BaseWebGuiScene"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "screen = WorkPlane(Axes( (0,0,0), Z, X)).RectangleC(0.5,0.5).Face()\n",
+    "vismesh = screen.GenerateMesh(maxh=0.05)\n",
+    "#Draw (vismesh);\n",
+    "LDL = LaplaceDL( uH1*ds)\n",
+    "u_num = LDL(m)\n",
+    "u_num.BuildLocalExpansion(vismesh.Boundaries(\".*\")) #MLFMM evaluation\n",
+    "Draw(u_num+0.575, vismesh) # Übereinstimmung bis auf Konstante\n",
+    "Draw(u_exa, vismesh)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -207,14 +318,14 @@
    "source": [
     "**Details** \n",
     "\n",
-    "The hypersingular operator is implemented as follows (reference below)\n",
+    "For any $u_j, v_i \\in H^{\\frac12}(\\Gamma)$, hypersingular operator is implemented as follows (reference below)\n",
     "\n",
-    "$$ D_{ij} = \\big\\langle v_j, \\gamma_1 \\mathrm{DL}(u_i) \\big\\rangle = \\frac{1}{4\\pi} \\int\\limits_\\Gamma\\int\\limits_\\Gamma \\frac{ \\langle \\mathrm{\\boldsymbol {curl}}_\\Gamma  \\,u_i(x), \\mathrm{\\boldsymbol{curl}}_\\Gamma\\, v_j(y) \\rangle}{\\|x-y\\|} \\, \\mathrm{d} s_{y} \\, \\mathrm{d} s_x $$ \n",
+    "$$ D_{ij} = \\big\\langle v_i, \\gamma_1 \\mathrm{DL}(u_j) \\big\\rangle = \\frac{1}{4\\pi} \\int\\limits_\\Gamma\\int\\limits_\\Gamma \\frac{ \\langle \\mathrm{\\boldsymbol {curl}}_\\Gamma  \\,u_j(x), \\mathrm{\\boldsymbol{curl}}_\\Gamma\\, v_i(y) \\rangle}{\\|x-y\\|} \\, \\mathrm{d} s_{y} \\, \\mathrm{d} s_x $$ \n",
     "\n",
     "This explicit represenation of $D$ is the singular layer potential operator with vector valued surface curl operator applied on trial and test functions. You may assemble $D$ it by\n",
     "\n",
     "```\n",
-    "    D = LaplaceSL(curl(u)*ds)*curl(v)*ds\n",
+    "D = LaplaceSL(curl(u)*ds)*curl(v)*ds\n",
     "```\n",
     "\n",
     "**References**\n",
