update Maxwell BEM: eval potential still working site

--- a/demos/Maxwell_DtN_direct.ipynb
+++ b/demos/Maxwell_DtN_direct.ipynb
@@ -239,9 +239,9 @@
    "source": [
     "**Details on Layer Potential Operators**\n",
     "\n",
-    "For a trial function $\\boldsymbol u_i \\in H^{-\\frac12}(\\mathrm{div}_\\Gamma,\\Gamma)$ and a test function $\\boldsymbol v_j \\in H^{-\\frac12}(\\mathrm{div}_\\Gamma,\\Gamma)$ the Maxwell single layer potential operator entry $V_{ij}$ can formally written as\n",
+    "For a trial function $\\boldsymbol u_j \\in H^{-\\frac12}(\\mathrm{div}_\\Gamma,\\Gamma)$ and a test function $\\boldsymbol v_i \\in H^{-\\frac12}(\\mathrm{div}_\\Gamma,\\Gamma)$ the Maxwell single layer potential operator entry $V_{ij}$ can formally written as\n",
     "\n",
-    "$$ V_{ij} = \\kappa \\, \\int\\limits_\\Gamma \\int\\limits_\\Gamma \\displaystyle{ \\frac{1}{4\\,\\pi} \\, \\frac{e^{i\\,\\kappa\\,\\|x-y\\|}}{\\| x-y\\|} } \\, \\boldsymbol u_i(y) \\cdot \\boldsymbol v_j(x) \\, \\mathrm{d}s_x \\mathrm{d} s_x - \\frac{1}{\\kappa} \\int\\limits_\\Gamma \\int\\limits_\\Gamma \\displaystyle{ \\frac{1}{4\\,\\pi}\\, \\frac{e^{i\\,\\kappa\\,\\|x-y\\|}}{\\| x-y\\|} } \\, \\mathrm{div}_\\Gamma \\boldsymbol u_i(y)\\,  \\mathrm{div}_\\Gamma \\boldsymbol v_j(x)\\, \\mathrm{d}\\sigma_y\\,\\mathrm d s_x\\,. $$ \n",
+    "$$ V_{ij} = \\kappa \\, \\int\\limits_\\Gamma \\int\\limits_\\Gamma \\displaystyle{ \\frac{1}{4\\,\\pi} \\, \\frac{e^{i\\,\\kappa\\,\\|x-y\\|}}{\\| x-y\\|} } \\, \\boldsymbol u_j(y) \\cdot \\boldsymbol v_i(x) \\, \\mathrm{d}s_x \\mathrm{d} s_x - \\frac{1}{\\kappa} \\int\\limits_\\Gamma \\int\\limits_\\Gamma \\displaystyle{ \\frac{1}{4\\,\\pi}\\, \\frac{e^{i\\,\\kappa\\,\\|x-y\\|}}{\\| x-y\\|} } \\, \\mathrm{div}_\\Gamma \\boldsymbol u_j(y)\\,  \\mathrm{div}_\\Gamma \\boldsymbol v_i(x)\\, \\mathrm{d}\\sigma_y\\,\\mathrm d s_x\\,. $$ \n",
     "\n",
     "The two contributions are derivates of the Helmholtz single layer potential operator and may be implemented as such:   \n",
     "\n",
@@ -249,9 +249,9 @@
     "V = kappa * (HelmholtzSL(u*ds, kappa)*v*ds - 1/kappa * HelmholtzSL(div(u)*ds, kappa)*div(v)*ds\n",
     "```\n",
     "\n",
-    "For a trial function $\\boldsymbol u_i \\in H^{-\\frac12}(\\mathrm{curl}_\\Gamma,\\Gamma)$ and a test function $\\boldsymbol v_j \\in H^{-\\frac12}(\\mathrm{div}_\\Gamma,\\Gamma)$ the Maxwell double layer potential operator entry $K_{ij}$ can formally written as\n",
+    "For a trial function $\\boldsymbol u_j \\in H^{-\\frac12}(\\mathrm{curl}_\\Gamma,\\Gamma)$ and a test function $\\boldsymbol v_i \\in H^{-\\frac12}(\\mathrm{div}_\\Gamma,\\Gamma)$ the Maxwell double layer potential operator entry $K_{ij}$ can formally written as\n",
     "\n",
-    "$$ K_{ij} = \\int\\limits_\\Gamma \\displaystyle\\int\\limits_\\Gamma \\displaystyle{ \\frac{1}{4\\,\\pi} \\, \\nabla_x \\frac{e^{i\\,\\kappa\\,\\|x-y\\|}}{\\| x-y\\|} }  \\times  ( \\boldsymbol n \\times \\boldsymbol{u}(y) ) \\, \\mathrm{d} s_y \\cdot \\boldsymbol v(x) \\mathrm d s_x\\,.$$\n",
+    "$$ K_{ij} = \\int\\limits_\\Gamma \\displaystyle\\int\\limits_\\Gamma \\displaystyle{ \\frac{1}{4\\,\\pi} \\, \\nabla_x \\frac{e^{i\\,\\kappa\\,\\|x-y\\|}}{\\| x-y\\|} }  \\times  ( \\boldsymbol n \\times \\boldsymbol{u}_j(y) ) \\, \\mathrm{d} s_y \\cdot \\boldsymbol v_i(x) \\mathrm d s_x\\,.$$\n",
     "\n",
     "Giving transparency to its relation to the Helmholtz double layer potential operator, you may assemble it as follows:\n",
     "\n",
