--- a/demos/Maxwell_DtN_indirect.ipynb
+++ b/demos/Maxwell_DtN_indirect.ipynb
@@ -216,7 +216,7 @@
    "id": "ab4aa5bb-60c9-4fdd-90ec-c4d5e228d8b8",
    "metadata": {},
    "source": [
-    "**TODO Evaluation of the Scattered Field**\n",
+    "**Evaluation of the Scattered Field**\n",
     "\n",
     "Define the geometry of the receiver, generate a mesh and evaluate the scattered field $\\boldsymbol E$.\n",
     "\n",
@@ -230,12 +230,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## sphere \n",
-    "#screen = Sphere( (0,0,0), 20)\n",
-    "#mesh_screen = Mesh( OCCGeometry(screen).GenerateMesh(maxh=1, perfstepsend=meshing.MeshingStep.MESHSURFACE)).Curve(4)\n",
-    "#fes_screen = HCurl(mesh_screen, order=3, complex=True)\n",
-    "#E_screen = GridFunction(fes_screen)\n",
-    "#E_screen.Set (V.GetPotential(j)[0:3], definedon=mesh_screen.Boundaries(\".*\"))"
+    "# sphere \n",
+    "order = 3\n",
+    "screen = Sphere( (0,0,0), 20)\n",
+    "mesh_screen = Mesh( OCCGeometry(screen).GenerateMesh(maxh=1, perfstepsend=meshing.MeshingStep.MESHSURFACE)).Curve(4)\n",
+    "fes_screen = HCurl(mesh_screen, order=3, complex=True)\n",
+    "E_screen = GridFunction(fes_screen)\n",
+    "\n",
+    "V = MaxwellSingleLayerPotentialOperator(fesHDiv, kappa, intorder=8 + 2 * order)\n",
+    "E_screen.Set (V.GetPotential(j)[0:3], definedon=mesh_screen.Boundaries(\".*\"))"
    ]
   },
   {
@@ -253,7 +256,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Draw(kappa*300*Norm(E_screen)*n, mesh_screen, deformation=True);"
+    "Draw(kappa*300*Norm(E_screen)*n, mesh_screen, deformation=True);"
    ]
   },
   {
@@ -271,12 +274,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## plane screen \n",
-    "#screen = WorkPlane(Axes( (0,0,-3.5), Z, X)).RectangleC(20,20).Face()\n",
-    "#mesh_screen = Mesh( OCCGeometry(screen).GenerateMesh(maxh=1)).Curve(1)\n",
-    "#fes_screen = HCurl(mesh_screen, order=3, complex=True)\n",
-    "#E_screen = GridFunction(fes_screen)\n",
-    "#E_screen.Set (V.GetPotential(j)[0:3], definedon=mesh_screen.Boundaries(\".*\"))"
+    "# plane screen \n",
+    "screen = WorkPlane(Axes( (0,0,-3.5), Z, X)).RectangleC(20,20).Face()\n",
+    "mesh_screen = Mesh( OCCGeometry(screen).GenerateMesh(maxh=1)).Curve(1)\n",
+    "fes_screen = HCurl(mesh_screen, order=3, complex=True)\n",
+    "E_screen = GridFunction(fes_screen)\n",
+    "E_screen.Set (V.GetPotential(j)[0:3], definedon=mesh_screen.Boundaries(\".*\"))"
    ]
   },
   {
@@ -286,7 +289,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Draw( E_screen, mesh_screen, draw_vol=False, order=3, min=0, max=0.1, animate_complex=True);"
+    "Draw( E_screen, mesh_screen, draw_vol=False, order=3, min=0, max=0.1, animate_complex=True);"
    ]
   },
   {
@@ -296,9 +299,9 @@
    "source": [
     "**Details on Layer Potential Operator**\n",
     "\n",
-    "For a trial function $\\boldsymbol u_i \\in H^{-\\frac12}(\\mathrm{div}_\\Gamma,\\Gamma)$ and a test function $\\boldsymbol v_j \\in H^{-\\frac12}(\\mathrm{div}_\\Gamma,\\Gamma)$ the Maxwell single layer potential operator entry $V_{ij}$ can formally written as\n",
+    "For a trial function $\\boldsymbol u_j \\in H^{-\\frac12}(\\mathrm{div}_\\Gamma,\\Gamma)$ and a test function $\\boldsymbol v_i \\in H^{-\\frac12}(\\mathrm{div}_\\Gamma,\\Gamma)$ the Maxwell single layer potential operator entry $V_{ij}$ can formally written as\n",
     "\n",
-    "$$ V_{ij} = \\kappa \\, \\int\\limits_\\Gamma \\int\\limits_\\Gamma \\displaystyle{ \\frac{1}{4\\,\\pi} \\, \\frac{e^{i\\,\\kappa\\,\\|x-y\\|}}{\\| x-y\\|} } \\, \\boldsymbol u_i(y) \\cdot \\boldsymbol v_j(x) \\, \\mathrm{d}s_x \\mathrm{d} s_x - \\frac{1}{\\kappa} \\int\\limits_\\Gamma \\int\\limits_\\Gamma \\displaystyle{ \\frac{1}{4\\,\\pi}\\, \\frac{e^{i\\,\\kappa\\,\\|x-y\\|}}{\\| x-y\\|} } \\, \\mathrm{div}_\\Gamma \\boldsymbol u_i(y)\\,  \\mathrm{div}_\\Gamma \\boldsymbol v_j(x)\\, \\mathrm{d}\\sigma_y\\,\\mathrm d s_x\\,. $$ \n",
+    "$$ V_{ij} = \\kappa \\, \\int\\limits_\\Gamma \\int\\limits_\\Gamma \\displaystyle{ \\frac{1}{4\\,\\pi} \\, \\frac{e^{i\\,\\kappa\\,\\|x-y\\|}}{\\| x-y\\|} } \\, \\boldsymbol u_j(y) \\cdot \\boldsymbol v_i(x) \\, \\mathrm{d}s_x \\mathrm{d} s_x - \\frac{1}{\\kappa} \\int\\limits_\\Gamma \\int\\limits_\\Gamma \\displaystyle{ \\frac{1}{4\\,\\pi}\\, \\frac{e^{i\\,\\kappa\\,\\|x-y\\|}}{\\| x-y\\|} } \\, \\mathrm{div}_\\Gamma \\boldsymbol u_i(y)\\,  \\mathrm{div}_\\Gamma \\boldsymbol v_i(x)\\, \\mathrm{d}\\sigma_y\\,\\mathrm d s_x\\,. $$ \n",
     "\n",
     "The two contributions are derivates of the Helmholtz single layer potential operator and may be implemented as such:   \n",
     "\n",
