fix geo-problem in Laplace demo, add int_order in Maxwell demo

--- a/demos/Laplace_DtN_direct.ipynb
+++ b/demos/Laplace_DtN_direct.ipynb
@@ -208,6 +208,7 @@
    "outputs": [],
    "source": [
     "screen = WorkPlane(Axes( (0,0,0), Z, X)).RectangleC(0.5,0.5).Face()\n",
+    "screen.faces.name=\"screen\"\n",
     "vismesh = screen.GenerateMesh(maxh=0.05)"
    ]
   },
@@ -219,9 +220,7 @@
    "outputs": [],
    "source": [
     "LSPotential = LaplaceSL( u*ds )\n",
-    "LDPotential = LaplaceDL( uH1*ds )\n",
-    "Draw(LSPotential(j) - LDPotential(m), vismesh) # Question: what do we draw here? \n",
-    "Draw(LSPotential(j) - LDPotential(m) - uexa, vismesh) # num solution - exact solution ( same question )"
+    "LDPotential = LaplaceDL( uH1*ds )"
    ]
   },
   {
@@ -229,7 +228,7 @@
    "id": "07475e90-1551-4b36-ac44-0c5312aeaa2a",
    "metadata": {},
    "source": [
-    "**Project repformula in H1 (which should be ok!) by Set**"
+    "**Project repformula in H1**"
    ]
   },
   {
@@ -241,11 +240,11 @@
    "source": [
     "repformula = LSPotential(j) - LDPotential(m)\n",
     "fes_screen = H1(vismesh, order=5)\n",
-    "screen.faces.name=\"screen\"\n",
     "gf_screen = GridFunction(fes_screen)\n",
     "with TaskManager():\n",
     "    gf_screen.Set(repformula, definedon=vismesh.Boundaries(\"screen\"))\n",
-    "Draw(gf_screen)"
+    "Draw(gf_screen)\n",
+    "Draw(repformula - uexa, vismesh)"
    ]
   },
   {
