--- a/demos/Maxwell_DtN_indirect.ipynb
+++ b/demos/Maxwell_DtN_indirect.ipynb
@@ -173,8 +173,8 @@
    "outputs": [],
    "source": [
     "with TaskManager(): \n",
-    "    V1 = HelmholtzSL( uHDiv.Trace()*ds , kappa) * vHDiv.Trace() * ds\n",
-    "    V2 = HelmholtzSL( div(uHDiv.Trace()) * ds, kappa) * div(vHDiv.Trace()) * ds\n",
+    "    V1 = HelmholtzSL( uHDiv.Trace()*ds(bonus_intorder=6) , kappa) * vHDiv.Trace() * ds(bonus_intorder=6)\n",
+    "    V2 = HelmholtzSL( div(uHDiv.Trace()) * ds(bonus_intorder=6), kappa) * div(vHDiv.Trace()) * ds(bounus_intorder=6)\n",
     "    V = kappa * V1.mat - 1/kappa * V2.mat"
    ]
   },
