add bonus_intorder to Maxwell operators

--- a/demos/Maxwell_DtN_direct.ipynb
+++ b/demos/Maxwell_DtN_direct.ipynb
@@ -175,10 +175,10 @@
    "outputs": [],
    "source": [
     "with TaskManager(): \n",
-    "    V1 = HelmholtzSL( uHDiv.Trace()*ds , kappa) * vHDiv.Trace() * ds\n",
-    "    V2 = HelmholtzSL( div(uHDiv.Trace()) * ds, kappa) * div(vHDiv.Trace()) * ds\n",
+    "    V1 = HelmholtzSL( uHDiv.Trace()*ds(bonus_intorder=6) , kappa) * vHDiv.Trace() * ds(bonus_intorder=6)\n",
+    "    V2 = HelmholtzSL( div(uHDiv.Trace()) * ds(bonus_intorder=6), kappa) * div(vHDiv.Trace()) * ds(bonus_intorder=6)\n",
     "    V = kappa * V1.mat - 1/kappa * V2.mat\n",
-    "    K = HelmholtzDL(uHCurl.Operator(\"rotated_trace\") * ds, kappa) * vHDiv.Trace() * ds"
+    "    K = HelmholtzDL(uHCurl.Operator(\"rotated_trace\") * ds(bonus_intorder=6), kappa) * vHDiv.Trace() * ds"
    ]
   },
   {
