--- a/demos/Maxwell_Mixed.ipynb
+++ b/demos/Maxwell_Mixed.ipynb
@@ -223,12 +223,12 @@
     "intorder = 2 * order + 6\n",
     "with TaskManager(): \n",
     "    M = BilinearForm( uHCurl.Trace() * vHDiv.Trace()* ds(bonus_intorder=3)).Assemble() # <Hcurl, Hdiv>  \n",
-    "    V1 = HelmholtzSL(uHDiv.Trace()*ds, kappa)*vHDiv.Trace()*ds\n",
-    "    V2 = HelmholtzSL(div(uHDiv.Trace())*ds, kappa)*div(vHDiv.Trace())*ds\n",
+    "    V1 = HelmholtzSL(uHDiv.Trace()*ds(bonus_intorder=6), kappa)*vHDiv.Trace()*ds(bonus_intorder=6)\n",
+    "    V2 = HelmholtzSL(div(uHDiv.Trace())*ds(bonus_intorder=6), kappa)*div(vHDiv.Trace())*ds(bonus_intorder=6)\n",
     "    V = kappa * V1.mat - 1/kappa * V2.mat\n",
-    "    K = HelmholtzDL(uHCurl.Operator(\"rotated_trace\") * ds, kappa) * vHDiv.Trace() * ds\n",
-    "    D1 = HelmholtzSL(uHCurl.Operator(\"rotated_trace\")*ds, kappa)*uHCurl.Operator(\"rotated_trace\")*ds\n",
-    "    D2 = HelmholtzSL(uHCurl.Operator(\"surface_curl\")*ds, kappa)*vHCurl.Operator(\"surface_curl\")*ds\n",
+    "    K = HelmholtzDL(uHCurl.Operator(\"rotated_trace\") * ds(bonus_intorder=6), kappa) * vHDiv.Trace() * ds(bonus_intorder=6)\n",
+    "    D1 = HelmholtzSL(uHCurl.Operator(\"rotated_trace\")*ds(bonus_intorder=6), kappa)*uHCurl.Operator(\"rotated_trace\")*ds(bonus_intorder=6)\n",
+    "    D2 = HelmholtzSL(uHCurl.Operator(\"surface_curl\")*ds(bonus_intorder=6), kappa)*vHCurl.Operator(\"surface_curl\")*ds(bonus_intorder=6)\n",
     "    D = kappa * D1.mat - 1/kappa * D2.mat"
    ]
   },
